# dependency-confusion.security

./: .gitignore  README.md  build.sh  compose.yaml  pip.conf  requirements.txt  runner.sh  setup.sh
attacker/: go.mod  main.go  out
gen-config/: crontab  devpi.service  net.devpi.plist  nginx-devpi-caching.conf  nginx-devpi.conf  supervisor-devpi.conf  windows-service.txt
malicious/src/merbe/: printers.py
malicious/src/merbe.egg-info/: SOURCES.txt
src/: pyproject.toml  script.py
src/legit/: README.md  pyproject.toml  setup.py
src/legit/merbe.egg-info/: PKG-INFO  SOURCES.txt
src/legit/src/merbals/: printers.py
src/legit/src/merpe.egg-info/: SOURCES.txt
src/malicious/: code  pyproject.toml  requirements.txt  setup.py
src/malicious/src/merbals/: __init__.py
src/malicious/src/merbals.egg-info/: PKG-INFO  SOURCES.txt
src/malicious/src/merbe.egg-info/: PKG-INFO
src/malicious/src/merpe.egg-info/: PKG-INFO  SOURCES.txt
src/sample/: pyproject.toml
src/sample/src/sample_package.egg-info/: PKG-INFO  SOURCES.txt
src/sample/src/sample_package_security.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
use/internal/: requirements.txt
use/merbals/: guide.md  requirements.txt  script.py
use/merbals/config/: pip.conf
use/merbe/: script.py
use/merpe/config/: pip.conf
