[project]
name = "merbals"
version = "3.4.12"
authors = [
  { name="Merzouka Youness", email="ya.merzouka@esi-sba.dz" },
  { name="BEKHTI Djalal", email="d.bekhti@esi-sba.dz" },
]
description = "A package for presentation in the systems' security module (dependency confusion)"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "GPL-3.0-or-later"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/merzouka/dependency-confusion.security.git"
Issues = "https://github.com/merzouka/dependency-confusion.security/issues"
